Stundenplanung mit Minizinc alle Planungs-Artefakte DTOs gegen zyklische Abhängigkeiten PDF Exporte